--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="graphic/style.css" rel="stylesheet" type="text/css"/>
     <title>Sedo's website - Accueil</title>
 </head>
 <body>
