Modification de structuration

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <aside>
         <nav>
             <ul>
-                <li>Bouton1</li>
-                <li>Bouton2</li>
-                <li>Bouton3</li>
+                <li id="selected">Qui suis-je</li>
+                <li>Me suivre</li>
+                <li>Mes documents</li>
             </ul>
         </nav>
     </aside>
