Réécriture du code
Assistance de CoPilot.

--- a/index.html
+++ b/index.html
@@ -8,23 +8,19 @@
 </head>
 <body>
     <header>
-        <h1>Sedo's website</h1>
+        <h1>Projet de site personnel</h1>
     </header>
-    <aside>
-        <nav>
-            <ul>
-                <li id="selected">Qui suis-je</li>
-                <li>Me suivre</li>
-                <li>Mes documents</li>
-            </ul>
-        </nav>
-    </aside>
+    <nav>
+        <a href="#home">Accueil</a>
+        <a href="#about">À propos</a>
+        <a href="#services">Services</a>
+        <a href="#contact">Contact</a>
+    </nav>
     <section>
-        <h2>Corps de page</h2>
-        <p>Work in progress...</p>
+        <p>Blablabla</p>
     </section>
     <footer>
-        <p>Footer in progress...</p>
+        <p>2024</p>
     </footer>
 </body>
 </html>
