--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
         <h1>Projet de site personnel</h1>
     </header>
     <nav>
-        <a href="#home">Accueil</a>
+        <a id="first" href="#home">Accueil</a>
         <a href="#about">À propos</a>
         <a href="#services">Services</a>
-        <a href="#contact">Contact</a>
+        <a id="last" href="#contact">Contact</a>
     </nav>
-    <section>
-        <p>Blablabla</p>
+    <section class="content">
+        <p>blabla</p>
     </section>
     <footer>
         <p>2024</p>
