--- a/index.html
+++ b/index.html
@@ -13,14 +13,23 @@
     <nav>
         <a id="first" href="#home">Accueil</a>
         <a href="#about">À propos</a>
-        <a href="#services">Services</a>
+        <a href="#services">Portefolio</a>
         <a id="last" href="#contact">Contact</a>
     </nav>
     <section class="content">
+        <h2>Welcome</h2>
         <p>blabla</p>
+    </section> 
+    <section class="content">
+        <h2>titre test</h2>
+        <p>blabla bis</p>
+    </section>
+    <section class="content">
+        <h2>titre test 2</h2>
+        <p>blabla tris</p>
     </section>
     <footer>
-        <p>2024</p>
+        <p>Page web hébergée grâce à Github, en 2024. Work in progress...</p>
     </footer>
 </body>
 </html>
