--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Projet de site personnel</h1>
+        <h1>Mon site personnel</h1>
     </header>
     <nav>
         <a id="first" href="#home">Accueil</a>
