--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 </head>
 <body>
     <header>
-        <h1>Mon site personnel</h1>
+        <h1>Sedo's Website</h1>
+        <h2 class="en_tete">Accueil</h2>
     </header>
     <nav>
-        <a id="first" href="#home">Accueil</a>
-        <a href="#about">À propos</a>
-        <a href="#services">Portefolio</a>
-        <a id="last" href="#contact">Contact</a>
+        <a id="first" href="index.html">Accueil</a>
+        <a href="./pages/about.html">À propos</a>
+        <a href="./pages/services.html">Portefolio</a>
+        <a id="last" href="./pages/contact.html">Contact</a>
     </nav>
     <section class="content">
         <h2>Welcome</h2>
@@ -24,7 +25,7 @@
         <h2>titre test</h2>
         <p>blabla bis</p>
     </section>
-    <section class="content">
+    <section class="content" id="last_info">
         <h2>titre test 2</h2>
         <p>blabla tris</p>
     </section>
