--- a/index.html
+++ b/index.html
@@ -18,19 +18,23 @@
         <a id="last" href="./pages/contact.html">Contact</a>
     </nav>
     <section class="content">
-        <h2>Welcome</h2>
-        <p>blabla</p>
-    </section> 
-    <section class="content">
-        <h2>titre test</h2>
-        <p>blabla bis</p>
-    </section>
+        <h2>Welcome y'all !</h2>
+        <p>Bienvenu sur mon site internet ! <span>(certifié sans gluten et sans trop d'égotrip)</span></p>
+        <br>
+        <p>Voyez ce site internet comme un CV géant me concernant. Ainsi vous trouverez, à travers les différentes pages de ce site :</p>
+        <ol>
+            <li>"À propos" : Des informations me concernant, ainsi que mon CV.</li>
+            <li>"Portefolio" : Mes diverses créations numériques.</li>
+            <li>"Contact" : Les diverses possibilité de me joindre / me suivre.</li>
+        </ol>
+        <br>
+        <p>Bonne navigation !</p>
     <section class="content" id="last_info">
-        <h2>titre test 2</h2>
-        <p>blabla tris</p>
+        <h2>Ma dernière publication notable -</h2>
+        <p>none...</p>
     </section>
     <footer>
-        <p>Page web hébergée grâce à Github, en 2024. Work in progress...</p>
+        <p>Page web hébergée grâce à Github, en 2024. Work in progress (V0.1)...</p>
     </footer>
 </body>
 </html>
