--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
         </ol>
         <br>
         <p>Bonne navigation !</p>
+    </section>
     <section class="content" id="last_info">
         <h2>Ma dernière publication notable -</h2>
         <p>none...</p>
     </section>
     <footer>
-        <p>Page web hébergée grâce à Github, en 2024. Work in progress (V0.1)...</p>
+        <p>Page web hébergée grâce à Github, en 2024. Work in progress (V0.1.1)...</p>
     </footer>
 </body>
 </html>
