--- a/pages/contact.html
+++ b/pages/contact.html
@@ -18,8 +18,13 @@
         <a id="last" href="contact.html">Contact</a>
     </nav>
     <section class="content">
-        <h2>Hello World !</h2>
+        <h2>Me suivre en ligne :</h2>
         <p>Pas encore de contenu ici.</p>
+    </section> 
+    <section class="content">
+        <h2>Me contacter par mail :</h2>
+        <p>- <span class="bold">Adresse étudiante</span> = cedric.boucly@etud.univ-paris8.fr <span class="ita" id="petit">(Adresse à privilégier)</span></p>
+        <p>- <span class="bold">Adresse personnelle</span> = cedric.boucly1@gmail.com</p>
     </section> 
     <footer>
         <p>Page web hébergée grâce à Github, en 2024. Work in progress...</p>
